--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <img src="assets/img/pessoasinteragindo.svg" alt="">
         </div>
     </header>
-    <main>
-        <section>
+    <main class="flex">
+        <section class="flex">
             <h3>Funcionalidades</h3>
-            <div>
+            <div class="funcionalidades flex">
                 <div class="card">
                     <img src="assets/img/gestao.svg" alt="">
                     <h1>Gestão</h1>
@@ -48,8 +48,8 @@
                     <p>Horários automaticos, evitando conflitos e garantindo praticidade no agendamento.</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <h1>Registro das Sessões</h1>
+                    <img src="assets/img/registrodesessao.svg" alt="">
+                    <h1>Registro</h1>
                     <p> Presenças, conteúdos e observações registradas de forma simples e segura, em um só lugar.</p>
                 </div>
                 <div class="card">
@@ -64,9 +64,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="sobre">
             <h3>Sobre</h3>
-            <div>
+            <div class="flex">
                 <p>O SICAT foi criado para modernizar o programa de tutoria do IFRN. Agora, tudo o que antes era feito em planilhas e papéis está reunido em uma única plataforma,<b> simples, rápida e acessível</b>.</p>
                 <img src="assets/img/image 1.svg" alt="">
             </div>
