--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <title>Paagina Inicial</title>
 </head>
 <body>
@@ -72,14 +74,14 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="flex">
         <div>
             <span>SICAT – Sistema de Controle e Agendamento de Tutorias</span>
             <span>IFRN - Instituto Federal do Rio Grande do Norte</span>
         </div>
-        <div>
-            <span><i></i>sicat@gmail.com</span>
-            <span><i></i>SICAT</span>
+        <div class="contatos flex">
+            <span><i class="fa-regular fa-envelope" style="color:white;"></i>sicat@gmail.com</span>
+            <span><i class="fa-brands fa-instagram" style="color:white;"></i>SICAT</span>
         </div>
     </footer>
 </body>
